--- a/.env
+++ b/.env
@@ -1,1 +1,8 @@
 API_TITLE: 'api dev------------'
+SPRING_DATASOURCE_URL=jdbc:sqlserver://sqlserver:1433;
+databaseName=UserDB2;
+encrypt=true;
+trustServerCertificate=true;
+sendStringParametersAsUnicode=true
+SPRING_DATASOURCE_USERNAME=sa
+SPRING_DATASOURCE_PASSWORD=Abc123$%^
