--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 API_TITLE: 'api dev------------'
 SPRING_DATASOURCE_URL=jdbc:sqlserver://sqlserver:1433;
-databaseName=UserDB2;
+databaseName=UserDB;
 encrypt=true;
 trustServerCertificate=true;
 sendStringParametersAsUnicode=true
