--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,9 +6,9 @@ spring:
     active: dev
 
   datasource:
-    url: ${SPRING_DATASOURCE_URL:jdbc:sqlserver://localhost:1433;databaseName=UserDB2;encrypt=true;trustServerCertificate=true;sendStringParametersAsUnicode=true}
+    url: ${SPRING_DATASOURCE_URL:jdbc:sqlserver://localhost:1433;databaseName=UserDB;encrypt=true;trustServerCertificate=true;sendStringParametersAsUnicode=true}
     username: ${SPRING_DATASOURCE_USERNAME:sa}
-    password: ${SPRING_DATASOURCE_PASSWORD:Abc123$%^
+    password: ${SPRING_DATASOURCE_PASSWORD:Abc123$%^}
     driver-class-name: com.microsoft.sqlserver.jdbc.SQLServerDriver
 
     hikari:
@@ -21,15 +21,11 @@ spring:
 
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: none
     show-sql: true
-    properties:
-      hibernate:
-        dialect: org.hibernate.dialect.SQLServerDialect
-        jdbc:
-          time_zone: Asia/Ho_Chi_Minh
+
   data:
     redis:
-      host: ${SPRING_REDIS_HOST:redis}
+      host: ${SPRING_REDIS_HOST:localhost}
       port: ${SPRING_REDIS_PORT:6379}
       timeout: 60000
